<resources>
    <string name="app_name">TodoApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_registered">Already Registered ?</string>
    <string name="login">Login</string>
    <string name="not_a_registered_member">Not a Registered Member Yet?</string>
</resources>